test/parse/relaxed/bad/eofinvline1.sol
s SATISFIABLE
v 1 2 